--- a/arch/arm64/configs/msm8953_defconfig
+++ b/arch/arm64/configs/msm8953_defconfig
@@ -450,6 +450,7 @@ CONFIG_DRM_PANEL_BOE_BS052FHM_A00_6C01=y
 CONFIG_DRM_PANEL_TIANMA_TL052VDXP02=y
 CONFIG_DRM_PANEL_TIANMA_NT35596=y
 CONFIG_DRM_PANEL_TIANMA_622_V0=y
+CONFIG_DRM_PANEL_HIMAX_HX8399C_FHDPLUS=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_TILEBLITTING=y
 CONFIG_FB_SIMPLE=y
