--- a/Documentation/devicetree/bindings/mailbox/qcom,apcs-kpss-global.yaml
+++ b/Documentation/devicetree/bindings/mailbox/qcom,apcs-kpss-global.yaml
@@ -94,6 +94,7 @@ allOf:
           contains:
             enum:
               - qcom,msm8916-apcs-kpss-global
+              - qcom,msm8976-apcs-kpss-global
     then:
       properties:
         clocks:
